<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">MonTransit</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="nearby">Nearby</string>
    <string name="map">Map</string>
    <string name="trip_planner">Trip Planner</string>
    <string name="news">News</string>
    <string name="fares">Fares</string>
    <string name="settings">Settings</string>
    <string name="customer_service">Customer Service</string>
    <string name="rate_review">Review App</string>
    <string name="privacy_setting">Privacy Settings</string>
    <string name="support">Support MonTransit</string>
    <string name="send_feedback_email">mtransit.apps@gmail.com</string>
    <string name="menu_action_nearby">Nearby</string>
    <string name="menu_action_search">Search</string>
    <string name="search_hint">Search MonTransit</string>
    <string name="search_no_result_for_and_query">No results for %s</string>
    <string name="all">All</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="agency_stop_type_stop">Stop</string>
    <string name="agency_stop_type_stops">Stops</string>
    <string name="agency_stop_type_station">Station</string>
    <string name="agency_stop_type_stations">Stations</string>
    <string name="agency_stop_type_train_station">Station</string>
    <string name="agency_stop_type_train_stations">Stations</string>
    <string name="agency_stop_type_port">Port</string>
    <string name="agency_stop_type_ports">Ports</string>
    <string name="agency_stop_type_terminal">Terminal</string>
    <string name="agency_stop_type_terminals">Terminals</string>
    <string name="agency_stop_type_place">Place</string>
    <string name="agency_stop_type_places">Places</string>
    <string name="agency_stop_type_module">Agency</string>
    <string name="agency_stop_type_modules">Agencies</string>
    <string name="agency_stop_type_favorite">Favorite</string>
    <string name="agency_stop_type_favorites">Favorites</string>
    <string name="agency_stop_type_news_article">News</string>
    <string name="agency_stop_type_news_articles">News</string>
    <string name="agency_type_stops_short_name">%1$s %2$s</string>
    <string name="agency_type_stops_nearby">Nearby %1$s</string>
    <string name="agency_type_ferry_short_name">Ferry</string>
    <string name="agency_type_ferry_all">Ferries</string>
    <string name="agency_type_light_rail_short_name">Light Rail</string>
    <string name="agency_type_light_rail_all">Light Rails</string>
    <string name="agency_type_tram_short_name">Streetcar</string>
    <string name="agency_type_tram_all">Streetcars</string>
    <string name="agency_type_subway_short_name">Subway</string>
    <string name="agency_type_subway_all">Subways</string>
    <string name="agency_type_rail_short_name">Train</string>
    <string name="agency_type_rail_all">Trains</string>
    <string name="agency_type_bus_short_name">Bus</string>
    <string name="agency_type_bus_all">Buses</string>
    <string name="agency_type_bike_short_name">Bike</string>
    <string name="agency_type_bike_all">Bikes</string>
    <string name="agency_type_place_short_name">Place</string>
    <string name="agency_type_place_all">Places</string>
    <string name="agency_type_module_short_name">Agency</string>
    <string name="agency_type_module_all">Agencies</string>
    <string name="agency_type_favorite_short_name">Favorite</string>
    <string name="agency_type_favorite_all">Favorites</string>
    <string name="agency_type_news_short_name">News</string>
    <string name="agency_type_news_all">News</string>
    <plurals name="app_disabled_issue_title">
        <item quantity="one">Agency disabled</item>
        <item quantity="other">Agencies disabled</item>
    </plurals>
    <string name="email">E-mail</string>
    <string name="tel">Phone Number</string>
    <string name="file">File</string>
    <string name="video">Video</string>
    <string name="facebook">Facebook</string>
    <string name="google_maps">Google Maps</string>
    <string name="twitter">Twitter</string>
    <string name="download_on_store">Download on Google Play</string>
    <string name="re_enable_app">Enable to resolve issue</string>
    <string name="view_on_store">View on Google Play</string>
    <string name="manage_app">App Management</string>
    <string name="manage_apps">Apps Management</string>
    <string name="uninstall">Uninstall</string>
    <string name="view_details">View Details</string>
    <string name="news_shared_on_and_author_and_source">%1$s on %2$s</string>
    <string name="no_news">No news.</string>
    <string name="latest_news">Latest News</string>
    <string name="no_favorites">No favorites.</string>
    <string name="no_favorites_details">Browse the app or use the search 🔍 feature to find stops or stations you need to access quickly.\n\nYou can also create folders 📁 to group them together.</string>
    <string name="favorite_removed">Favorite removed.</string>
    <string name="favorite_removed_from_folder_and_folder">Favorite removed from %s.</string>
    <string name="favorite_moved">Favorite moved.</string>
    <string name="favorite_moved_to_folder_and_folder">Favorite moved to %s.</string>
    <string name="favorite_added">Favorite added.</string>
    <string name="favorite_added_to_folder_and_folder">Favorite added to %s.</string>
    <string name="favorite_remove">- Remove from favorites</string>
    <string name="favorite_folder_new">+ New folder</string>
    <string name="favorite_folder_name_hint">Folder name</string>
    <string name="favorite_folder_new_create">Create folder</string>
    <string name="favorite_folder_edit">Rename folder</string>
    <string name="favorite_folder_new_cancel">Cancel</string>
    <string name="favorite_folder_new_invalid_name">Invalid folder name!</string>
    <string name="favorite_folder_new_creation_error_and_folder_name">Error while creating folder %s!</string>
    <string name="favorite_folder_new_created_and_folder_name">Folder %s created.</string>
    <string name="favorite_folder_deletion_error_and_folder_name">Error while deleting folder %s!</string>
    <string name="favorite_folder_deleted_and_folder_name">Folder %s deleted.</string>
    <string name="favorite_folder_deletion_confirmation_title_and_name">Delete %s?</string>
    <string name="favorite_folder_deletion_confirmation_text_and_name">Are you sure you want to delete the favorite folder %s?</string>
    <string name="favorite_folder_edited_and_folder">Folder renamed to %s.</string>
    <string name="favorite_folder_empty">(empty)</string>
    <string name="favorite_folder_pick">Select folder</string>
    <string name="favorite_folder_pick_ok">OK</string>
    <string name="favorite_folder_pick_cancel">Cancel</string>
    <string name="favorite_folder_default">(default)</string>
    <string name="location_permission_in_app_notification_label">Device location permission disabled.</string>
    <string name="location_permission_in_app_notification_label_onboarding">Get more precise recommendations.</string>
    <string name="location_permission_in_app_notification_action">ENABLE</string>
    <string name="location_settings_in_app_notification_label">Device location settings disabled.</string>
    <string name="location_settings_in_app_notification_action">ENABLE</string>
    <string name="module_disabled_in_app_notification_label">Agency disabled.</string>
    <string name="module_disabled_in_app_notification_label_and_agency">%s disabled.</string>
    <string name="module_disabled_in_app_notification_action">FIX</string>
    <string name="samsung_device_care">Device Care (Samsung)</string>
    <string name="new_location_in_app_notification_label">New location.</string>
    <string name="new_location_in_app_notification_action">REFRESH</string>
    <string name="no_results">No Results</string>
    <string name="world_explored">Planetary exploration completed</string>
    <string name="module_label">Agencies</string>
    <string name="module_short_name">Agencies</string>
    <string name="place_label">Places</string>
    <string name="place_short_name">Places</string>
    <string name="view_stop">View stop</string>
    <string name="view_stop_route">View stop route</string>
    <string name="view_stop_route_and_route">View route %s</string>
    <string name="add_fav">Add to favorites</string>
    <string name="remove_fav">Remove from favorites</string>
    <string name="edit_fav">Move/Remove favorite</string>
    <string name="menu_action_show_service_updates">Service Updates</string>
    <string name="menu_action_list">List</string>
    <string name="menu_action_grid">Grid</string>
    <string name="menu_action_map">Map</string>
    <string name="menu_action_favorite_folder_new">Create new favorite folder</string>
    <string name="menu_action_www">Open Web Browser</string>
    <string name="menu_action_fullscreen">Open fullscreen</string>
    <string name="menu_action_fullscreen_exit">Exit fullscreen</string>
    <string name="menu_action_filter">Filter</string>
    <string name="menu_action_show_directions">Directions</string>
    <string name="menu_action_show_today">Today</string>
    <string name="menu_action_sort">Sort</string>
    <string name="menu_action_refresh_available_version">&#8635; available versions</string>
    <string name="menu_action_force_refresh_available_version">&#8635; available versions!</string>
    <string name="menu_action_add_favorite">Add to favorites</string>
    <string name="menu_action_remove_favorite">Remove from favorites</string>
    <string name="menu_action_edit_favorite">Edit favorite</string>
    <string name="menu_action_fares">Show fares</string>
    <string name="next_departures">Next Departures</string>
    <string name="availability">Availability</string>
    <string name="full_schedule">Full Schedule</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="local_time_and_time">Local time: %s</string>
    <string name="sorry_about_that">Sorry about that :(</string>
    <string name="support_subs_pref_title">Support MonTransit</string>
    <string name="support_subs_pref_summary">Hide ads and support MonTransit development.</string>
    <string name="support_title">Support MonTransit</string>
    <string name="support_about">MonTransit is one of the many apps built with the freely accessible open-data published by transit agencies.\nUnlike other apps who receive money from tickets or passes, taxes or private investors, MonTransit is an independent self-founded, free and open-source project.\nYour support will brings app improvements faster for everyone.</string>
    <string name="support_basic_title">Basic</string>
    <string name="support_basic_description">Less Ads</string>
    <string name="support_pro_title">Pro</string>
    <string name="support_pro_description">No Ads</string>
    <string name="support_start">Start</string>
    <string name="support_cancel_anytime">Cancel anytime.</string>
    <string name="support_link_paid_tasks_incentive">Too expensive? Click here to earn Play credit by answering quick surveys from Google.</string>
    <string name="support_subs_pick_price">Pick your price ;)</string>
    <string name="support_subs_try_cancel">(cancel any time on Google Play)</string>
    <string name="support_subs_buy_with_play">Subscribe with Google Play</string>
    <string name="support_weekly_short">Weekly</string>
    <string name="support_monthly_short">Monthly</string>
    <string name="support_yearly_short">Yearly</string>
</resources>