<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.type.rds.RDSAgencyRoutesFragment">
    <!-- LOADING -->
    <include
        android:id="@id/loading_layout"
        layout="@layout/layout_loading_large"
        android:visibility="gone"
        tools:visibility="visible" />
    <!-- LIST / GRID -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@id/list_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fastScrollAlwaysVisible="false"
        android:fastScrollEnabled="false"
        android:scrollbarStyle="insideOverlay"
        android:visibility="visible"
        tools:listitem="@layout/layout_rds_route_item"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fares"
        style="@style/MTFabMiniBottomEndNotLast"
        android:layout_toStartOf="@id/fab_list_grid"
        android:contentDescription="@string/menu_action_fares"
        android:src="@drawable/ic_payments_black_24"
        android:visibility="gone"
        tools:backgroundTint="#FF00FF"
        tools:rippleColor="#00FF00"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_list_grid"
        style="@style/MTFabMiniBottomEnd"
        android:contentDescription="@string/menu_action_list"
        android:src="@drawable/switch_action_view_headline_dark_16dp"
        tools:backgroundTint="#FF00FF"
        tools:contentDescription="@string/menu_action_grid"
        tools:rippleColor="#00FF00"
        tools:src="@drawable/switch_action_apps_dark_16dp" />
    <!-- EMPTY -->
    <include
        android:id="@id/empty_layout"
        layout="@layout/layout_empty"
        android:visibility="gone"
        tools:visibility="gone" />

    <include layout="@layout/layout_shadow" />
</RelativeLayout>