<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.type.poi.AgencyPOIsFragment">
    <!-- MAP -->
    <org.mtransit.android.ui.view.common.MapViewInScroll
        android:id="@id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:mapType="none"
        app:uiCompass="true"
        app:uiRotateGestures="true"
        app:uiScrollGestures="true"
        app:uiTiltGestures="true"
        app:uiZoomControls="true"
        app:uiZoomGestures="true"
        tools:visibility="invisible" />

    <include layout="@layout/view_map_type_switch" />
    <!-- LIST -->
    <include
        android:id="@id/list_layout"
        layout="@layout/layout_poi_list_padding_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fares"
        style="@style/MTFabMiniBottomEnd"
        android:layout_marginEnd="@dimen/fab_mini_margin_end_above_fab"
        android:contentDescription="@string/menu_action_fares"
        android:src="@drawable/ic_payments_black_24"
        android:visibility="gone"
        tools:backgroundTint="#FF00FF"
        tools:rippleColor="#00FF00"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_list_map"
        style="@style/MTFabMiniBottomEnd"
        android:contentDescription="@string/menu_action_list"
        android:src="@drawable/switch_action_view_headline_dark_16dp"
        tools:backgroundTint="#FF00FF"
        tools:contentDescription="@string/menu_action_map"
        tools:rippleColor="#00FF00"
        tools:src="@drawable/switch_action_map_dark_16dp" />
    <!-- LOADING -->
    <include
        android:id="@id/loading_layout"
        layout="@layout/layout_loading_large"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="gone" />
    <!-- EMPTY -->
    <include
        android:id="@id/empty_layout"
        layout="@layout/layout_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="gone" />

    <include layout="@layout/layout_shadow" />
</RelativeLayout>
